[package]
name = "ndless-text-viewer"
version = "0.2.1"
authors = ["Florian Schmidt"]
edition = "2021"

[dependencies]
ndless = { git = 'https://github.com/jacobk999/ndless-rs.git' }
ndless-handler = { git = 'https://github.com/jacobk999/ndless-rs.git' }
ndless-sdl = { git = 'https://github.com/jacobk999/ndless-rs.git' }
unicode-segmentation = { version = "1.10.1", features = ["no_std"] }
ndless-freetype = "0.1.3"

[features]
default = []
benchmark = []